Fix animation overflow, lessons width, js formatting

--- a/src/css/sections/lessons.css
+++ b/src/css/sections/lessons.css
@@ -1,13 +1,28 @@
 @media only screen and (min-width: 768px) {
-  .lessons .container > .secondary-text {
+  .lessons .container>.secondary-text {
     max-width: 665px;
     margin-right: auto;
     margin-left: auto;
   }
 }
 
+.lessons-list-item.card-set-item {
+  --items: 1;
+}
+
+@media only screen and (min-width: 768px) {
+  .lessons-list-item.card-set-item {
+    --items: 2;
+  }
+}
+
+@media only screen and (min-width: 1152px) {
+  .lessons-list-item.card-set-item {
+    --items: 3;
+  }
+}
+
 .lessons-list-item {
-  max-width: 335px;
   min-height: 400px;
   padding: 40px 20px;
   border: 1px solid var(--green-color);
@@ -22,7 +37,6 @@
 
 @media only screen and (min-width: 768px) {
   .lessons-list-item {
-    max-width: 336px;
     min-height: 404px;
     padding: 32px 16px;
     border-radius: 30px;
@@ -31,7 +45,6 @@
 
 @media only screen and (min-width: 1152px) {
   .lessons-list-item {
-    max-width: 320px;
     padding: 32px;
   }
 }
